css/default.css
/* ＃＃＃＃＃＃＃＃＃
 * ＃ default.css  ＃
 * ＃＃＃＃＃＃＃＃＃
 *
 * For `/html/*`, with exception of `/html/menu.html`
 *
 */

/* 　　　　〓
 * 　　　　〓　　　〓〓〓〓〓〓〓
 * 　　　　〓　　　　　　〓
 * 　〓〓〓〓〓〓〓　　　〓
 * 　〓　　〓　　〓　　　〓
 * 　〓　　〓　　〓　　　〓
 * 　〓　　〓　　〓　　　〓
 * 　〓　　〓　　〓　　　〓
 * 　〓〓〓〓〓〓〓　　　〓
 * 　　　　〓　　　　　　〓
 * 　　　　〓　　　　　　〓
 * 　　　　〓　〓　　　　〓
 * 　　　　〓　〓　　　　〓
 * 　　　　〓〓〓〓　　　〓
 * 　〓〓〓〓　　〓　　　〓
 * 　　　　　　　　〓〓〓〓〓〓〓〓
 */

/* ┌─────────────────────────────────────────┐
 * │ Import fonts from Google (sorry EU :/ ) │
 * └─────────────────────────────────────────┘
 *
 * This is mainly for in the event that the fonts I normally
 * use are not installed on the PC.
 *
 */

/* Noto Sans Japanese */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP');

/* Noto Serif Japanese */
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP');

/* Noto Sans Myanmar */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Myanmar');

/* Noto Sans */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans');

/* Noto Sans Simplified Chinese */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC');

/* Noto Sans Traditional Chinese */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC');

/* Noto Serif Devanagari */
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Devanagari');

/* Noto Sans Georgian */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian');

/* Noto Sans Korean */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR');

/* Noto Sans Malayalam */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Malayalam');

/* Noto Sans Mongolian */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mongolian');

/* Noto Naskh Arabic */
@import url('https://fonts.googleapis.com/css2?family=Noto+Naskh+Arabic');

/* Noto Nastaliq Urdu */
@import url('https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu');

/* Noto Serif Tibetan */
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Tibetan');

/* ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 * ┃ Styling for specific elements ┃
 * ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 */

/* ┌────────────────────────┐
 * │ Stylesheet for anchors │
 * └────────────────────────┘
 */

/* Unvisited links */
a:link {
    color: #99c3ff;
}

/* ┌─────────────────────┐
 * │ Stylesheet for body │
 * └─────────────────────┘
 */

body {
    font-family: 'ヒラギノ丸ゴ Pro W4', 'Noto Sans CJK JP', 'ＭＳ ゴシック', 'Noto Sans JP', sans-serif;
    font-size: 1.19em;
    background-color: #121212;
    color: #e5e5e5;
    padding-right: 2px;
    padding-left: 2px;
}

/* ┌─────────────────────────┐
 * │ Stylesheet for headings │
 * └─────────────────────────┘
 */

/* Heading 1 */
h1 {
    font-size: 2.63em;
    font-family: 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
    line-height: 1em;
    margin-bottom: auto;
    text-align: center;
}

/* Heading 2 */
h2 {
    font-size: 2.31em;
    font-family: 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
    line-height: 1em;
    margin-bottom: auto;
    text-align: center;
}

/* Heading 3 */
h3 {
    font-size: 2em;
    font-family: 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
    line-height: 1em;
    margin-bottom: auto;
    text-align: center;
}

/* Heading 4 */
h4 {
    font-size: 1.5em;
    font-family: 'ヒラギノ角ゴ Pro W6', 'Noto Sans CJK JP', 'Noto Sans JP', sans-serif;
    line-height: 1em;
    margin-bottom: auto;
    text-align: center;
}

/* Heading 5 */
h5 {
    font-size: 1.31em;
    font-family: 'ヒラギノ角ゴ Pro W6', 'Noto Sans CJK JP', 'Noto Sans JP', sans-serif;
    line-height: 1em;
    margin-bottom: auto;
    text-align: center;
}

/* ┌─────────────────────────┐
 * │ Stylesheet for furigana │
 * └─────────────────────────┘
 */

/* Furigana / ふりがな */
rt {
    font-size: 0.595em; /* see https://www.w3.org/TR/jlreq/?lang=en#ruby_and_emphasis_dots for more details */
}

/* ┌───────────────────────┐
 * │ Stylesheet for header │
 * └───────────────────────┘
 */

header {
    background-color: #7f7f7f;
    padding: 8px;
    text-align: center;
}

/* ┌────────────────────────┐
 * │ Stylesheet for article │
 * └────────────────────────┘
 */

article {
    padding: 8px;
}

/* ┌─────────────────────────┐
 * │ Stylesheet for sections │
 * └─────────────────────────┘
 */

section {
    padding-top: 4px;
    padding-left: 4px;
    padding-right: 4px;
    padding-bottom: 92px;
}

/* ┌───────────────────────┐
 * │ Styelsheet for footer │
 * └───────────────────────┘
 */

footer {
    background-color: #1f1f1f;
    padding: 8px;
    text-align: center;
    color: #ffffff;
    font-family: 'ヒラギノ角ゴ Pro W3', 'Noto Sans CJK JP', 'Noto Sans JP', sans-serif;
}

/* ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
 * ┃ Classes for various stuffs >:3 ┃
 * ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 */

/* ┌────────────────────────────┐
 * │ Language classes for fonts │
 * └────────────────────────────┘
 */

/* Burmese script */
.font-myanmar {
    font-family: Pyidaungsu, 'Noto Sans Myanmar UI', 'Myanmar Text', 'Noto Sans Myanmar', sans-serif;
    font-size: 125%;
}

/* Cyrillic alphabet */
.font-cyrillic {
    font-family: 'Arimo', 'Linux Biolinum', 'Arial', 'Noto Sans', sans-serif;
}

/* Simplified Chinese */
.font-simphanzi {
    font-family: 'Noto Sans CJK SC', 'KaiTi', 'Noto Sans SC', sans-serif;
}

/* Traditional Chinese */
.font-tradhanzi {
    font-family: 'Noto Sans CJK TC', 'DFKai-SB', 'Noto Sans TC', sans-serif;
}

/* Devanagari */
.font-devanagari {
    font-family: 'Chandas', 'Sanskrit Text', 'Mangal', 'Noto Serif Devanagari', serif;
    font-size: 125%;
}

/* Georgian script */
.font-georgian {
    font-family: 'Sylfaen', 'Noto Sans Georgian', serif;
}

/* Greek alphabet */
.font-greek {
    font-family: 'Arimo', 'Linux Biolinum', 'Arial', 'Noto Sans', sans-serif;
}

/* Korean - Hangul */
.font-hangul {
    font-family: 'Gulim', 'Noto Sans CJK KR', 'Noto Sans KR', sans-serif;
}

/* Korean - Hanja */
.font-hanja {
    font-family: 'Gulim', 'Noto Sans CJK KR', 'Noto Sans KR', sans-serif;
}

/* Latin alphabet */
.font-latin {
    font-family: 'Arimo', 'Linux Biolinum', 'Arial', 'Noto Sans', sans-serif;
}

/* Malayalam script */
.font-malayalam {
    font-family: 'Gayathri', 'Noto Sans Malayalam', sans-serif;
    font-size: 125%;
}

/* Mongolian script */
.font-mongolian {
    font-family: 'Menk Hawang Tig', 'Menk Qagan Tig', 'Menk Garqag Tig', 'Menk Har_a Tig', 'Menk Scnin Tig', 'Oyun Gurban Ulus Tig', 'Oyun Qagan Tig', 'Oyun Garqag Tig', 'Oyun Har_a Tig', 'Oyun Scnin Tig', 'Oyun Agula Tig', 'Mongolian Baiti', 'Mongolian Universal White', 'Mongol Usug', 'Mongolian White', 'MongolianScript', 'Code2000', 'Menksoft Qagan', 'Noto Sans Mongolian', serif;
    font-size: 125%;
}

/* Perso-Arabic script - Naskh */
.font-naskh {
    font-family: 'Noto Naskh Arabic UI', 'Arabic Typesetting', 'Dubai', 'Noto Naskh Arabic', serif;
    font-size: 125%;
}

/* Perso-Arabic script - Nastaliq */
.font-nastaliq {
    font-family: 'Urdu Typesetting', 'Noto Nastaliq Urdu', serif;
    font-size: 125%;
}

/* Tibetan script */
.font-tibetan {
    font-family: 'Tibetan Machine Uni', 'BabelStone Tibetan Slim', 'BabelStone Tibetan', 'Noto Serif Tibetan', serif;
    font-size: 125%;
}

/* ┌───────────────┐
 * │ <div> classes │
 * └───────────────┘
 */

/* <div> for galleries */
.gallery {
    padding-top: 8px;
    padding-right: 4px;
    padding-left: 4px;
    padding-bottom: 0px;
}

/* <div> for headings */
.heading {
    padding-top: 4px;
    padding-right: 8px;
    padding-left: 8px;
    padding-bottom: 4px;
}

/* <div> for sprite (and their captions) */
.sprite {
    float: right;
    box-sizing: border-box;
    border-style: ridge;
    border-width: 5px;
    border-color: #666666;
    padding: 1px;
    margin: 4px;
    background-color: #666666;
}

/* <div> for character art (and their captions) */
.art-chara {
    float: right;
    box-sizing: border-box;
    border-style: ridge;
    border-width: 5px;
    border-color: #666666;
    padding: 1px;
    margin: 4px;
    background-color: #666666;
}

/* <div> for prides! */
.pride {
    float: right;
    box-sizing: border-box;
    border-style: ridge;
    border-width: 5px;
    border-color: hotpink;
    padding: 1px;
    margin: 4px;
    background-color: hotpink;
}

/* <div> for character refs */
.art-ref {
    float: left;
    box-sizing: border-box;
    border-style: ridge;
    border-width: 5px;
    border-color: #666666;
    padding: 1px;
    margin: 8px;
    background-color: #666666;
}

/* <div> for character art (Gallery only) */
.art-gallery {
    float: left;
    box-sizing: border-box;
    border-style: ridge;
    border-width: 5px;
    border-color: #666666;
    padding: 1px;
    margin: 8px;
    background-color: #666666;
}

/* ┌─────────────────┐
 * │ Flexbox classes │
 * └─────────────────┘
 */

/* Art Gallery flexbox */
.flex-gallery {
    display: flex;
    flex-direction: row;
}

/* ┌───────────────┐
 * │ Other classes │
 * └───────────────┘
 * 
 */

/* Captions! */
.caption {
    padding: 0px;
    margin: 2px;
    color: #ffffff;
}

/* Image borders (primarily for the pride flags) :3 */
.border {
    border-style: groove;
    border-width: 2px;
    border-color: #FEFEFA;
}

/* COMING AT SOME POINT!! */
.coming-soon {
    text-align: center;
    font-size: 10.67em;
}

/* Header text */
.header-text {
    font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', 'Noto Sans JP', sans-serif;
    font-size: 2.25em;
}

/* Pride heading */
.pride-head {
    text-align: center;
    font-size: 1.31em;
    font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', 'Noto Sans JP', sans-serif;
    color: #000000;
}

/* Pronouns */
.pronouns {
    padding-left: 2px;
    font-size: 1.19em;
    font-family: 'ヒラギノ丸ゴ Pro W4', 'Noto Sans CJK JP', 'ＭＳ ゴシック', 'Noto Sans JP', sans-serif;
    color: #000000;
}

/* Textual setup for Mongolian script */
.text-mongolian {
    display: inline-block;
    font-weight: normal;
    line-height: 1.1em;
    -webkit-writing-mode: vertical-lr;
    -o-writing-mode: vertical-lr;
    -ms-writing-mode: tb-lr;
    writing-mode: tb-lr;
    writing-mode: vertical-lr;
    text-orientation: sideways;
    vertical-align: top;
}

/* Old or obsolete writing system notes */
.old-text {
    color: #cd0000;
}

/* Gallery Headings */
.art-heading {
    text-align: left;
}

/* ┌───────────────┐
 * │ Image classes │
 * └───────────────┘
 * 
 */

/* Main Character Art */
.art {
    border-style: groove;
    border-width: 2px;
    border-color: #fefefa;
    width: 256px;
}

/* Gallery Character Art */
.gallery-art {
    border-style: groove;
    border-width: 2px;
    border-color: #fefefa;
    height: 256px;
}

/* Pride flags! :3 */
.pride-flag {
    border-style: groove;
    border-width: 2px;
    border-color: #fefefa;
    width: 260px;
    height: 158px;
}

/* Ref Sheets */
.reference-art {
    border-style: groove;
    border-width: 2px;
    border-color: #fefefa;
    width: 256px;
}

/* Title art */
.title-art {
    width: 50%;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

